--- a/.github/workflows/azure-deployment.yml
+++ b/.github/workflows/azure-deployment.yml
@@ -13,6 +13,10 @@ on:
       - infrastructure/**
   workflow_dispatch: # manual trigger
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs: 
   deploy-dev:
     runs-on: ubuntu-latest
